--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.25)
 
-project(ipc-lock LANGUAGES CXX DESCRIPTION "")
+project(mutex LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-option(BUILD_STATIC "" ON)
+option(BUILD_STATIC "Build static library" ON)
+option(BUILD_DOCS "Build docs" OFF)
 option(ENABLE_ASAN "Enables asan build" OFF)
 
 if (PROJECT_IS_TOP_LEVEL)
@@ -43,34 +45,42 @@ if (PROJECT_IS_TOP_LEVEL)
     endif ()
 endif ()
 include_directories(
-        inc/
+        include/
 )
 
-file(GLOB INC_FILES CONFIGURE_DEPENDS
-        ${PROJECT_SOURCE_DIR}/inc/*.hpp
+file(GLOB_RECURSE INC_FILES CONFIGURE_DEPENDS
+        include/*.hpp
 )
-file(GLOB SRC_FILES CONFIGURE_DEPENDS
-        ${PROJECT_SOURCE_DIR}/src/*.cpp
+file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS
+        source/*.cpp
 )
 
-set(LIB_VERSION 1.0.1)
+set(LIB_VERSION 2.0.0)
 
 if ("${CMAKE_INSTALL_PREFIX}" STREQUAL "")
-    message(STATUS "CMAKE_INSTALL_PREFIX is not set. $ENV{HOME} directory will be used")
-    set(INSTALL_PREFIX "$ENV{HOME}")
-else ()
-    set(INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
+    message(STATUS "${PROJECT_NAME}: CMAKE_INSTALL_PREFIX is not set. ${CMAKE_BINARY_DIR} directory will be used")
+    set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/mt_libs")
+else()
+    set(CMAKE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/mt_libs")
 endif ()
 
-set(PROJECT_INSTALL_DIR ${INSTALL_PREFIX}/${PROJECT_NAME})
-set(LIBRARY_INSTALL_DIR ${PROJECT_INSTALL_DIR}/${CMAKE_BUILD_TYPE})
-message(STATUS "${PROJECT_NAME}: Library install directory is set to ${LIBRARY_INSTALL_DIR}")
-set(INCLUDE_INSTALL_DIR ${LIBRARY_INSTALL_DIR}/inc)
-message(STATUS "${PROJECT_NAME}: Include install directory is set to ${INCLUDE_INSTALL_DIR}")
-set(CMAKE_CONFIG_INSTALL_DIR ${INSTALL_PREFIX}/cmake/${CMAKE_BUILD_TYPE})
-message(STATUS "${PROJECT_NAME}: CMake config files install directory is set to ${CMAKE_CONFIG_INSTALL_DIR}")
+string(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
 
-if (BUILD_STATIC)
+set(PROJECT_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME})
+set(LIBRARY_INSTALL_DIR ${PROJECT_INSTALL_DIR}/${BUILD_TYPE})
+message(STATUS "${PROJECT_NAME}: Library install directory is set to ${LIBRARY_INSTALL_DIR}")
+set(INCLUDE_INSTALL_DIR ${LIBRARY_INSTALL_DIR}/include)
+message(STATUS "${PROJECT_NAME}: Include install directory is set to ${INCLUDE_INSTALL_DIR}")
+
+if (NOT ${PROJECT_IS_TOP_LEVEL})
+    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+        add_compile_definitions(MT_DEBUG)
+    endif ()
+    set(MUTEX_LIBRARY_DIR ${LIBRARY_INSTALL_DIR} PARENT_SCOPE)
+    set(MUTEX_INCLUDE_DIR ${INCLUDE_INSTALL_DIR} PARENT_SCOPE)
+endif ()
+
+if (${BUILD_STATIC})
     message(STATUS "${PROJECT_NAME}: Will build static library")
     add_library(${PROJECT_NAME} STATIC)
 else ()
@@ -78,11 +88,6 @@ else ()
     add_library(${PROJECT_NAME} SHARED)
 endif ()
 
-if (PROJECT_IS_TOP_LEVEL)
-    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-        target_compile_definitions(${PROJECT_NAME} PUBLIC TRISTAN_DEBUG)
-    endif ()
-endif ()
 
 if (${ENABLE_ASAN} AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_BUILD_TYPE STREQUAL "Debug")
     string(REPLACE "." ";" CLANG_VERSION ${CMAKE_CXX_COMPILER_VERSION})
@@ -104,8 +109,8 @@ endif ()
 
 target_sources(
         ${PROJECT_NAME}
-        PUBLIC ${INC_FILES}
         PRIVATE ${SRC_FILES}
+        PUBLIC ${INC_FILES}
 )
 
 set_target_properties(
@@ -114,3 +119,16 @@ set_target_properties(
         VERSION ${LIB_VERSION}
         OUTPUT_NAME ${PROJECT_NAME}
 )
+if (${BUILD_DOCS})
+    find_package(Doxygen REQUIRED doxygen)
+    set(DOXYGEN_OUTPUT_DIRECTORY ${PROJECT_INSTALL_DIR}/Docs)
+    set(DOXYGEN_GENERATE_HTML YES)
+    set(DOXYGEN_GENERATE_LATEX NO)
+    set(DOXYGEN_SORT_MEMBER_DOCS NO)
+    doxygen_add_docs(
+            doxygen
+            ${PROJECT_SOURCE_DIR}/inc
+            ALL
+    )
+endif ()
+
